cleanup filter code. fix small screen css to align filter icons better

--- a/src/assets/scss/modules/_item_list.scss
+++ b/src/assets/scss/modules/_item_list.scss
@@ -90,6 +90,7 @@ The Item list is the container and list of items for trade
   display: flex;
   align-items: center;
   justify-content: space-between;
+  margin: 0 0 0 .75rem;
 }
 
 .item-list-header-filter-icon {
